# workshop-estrutura-de-projetos

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
app/: __init__.py  main.py
app/pipeline/: __init__.py  extract.py  load.py  transform.py
app/pipeline/data/output/: test.xlsx
data/output/: output.xlsx
pipeline/extract/: index.html
pipeline/load/: index.html
pipeline/transform/: index.html
tests/: __init__.py  test_pipeline.py
tests/test_pipeline/: index.html
