[tool.poetry]
name = "estrutura-de-projeto-de-dados"
version = "0.1.0"
description = "Estrutura de projetos de dados."
authors = ["Fefe Alves <monitore.falves@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.3"
pandas = "^2.3.1"
openpyxl = "^3.1.5"
mkdocs-material = "^9.6.15"
mermaid = "^0.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
isort = "^6.0.1"
flake8 = "^7.3.0"
black = "^25.1.0"
mypy = "^1.17.0"
pylint = "^3.3.7"
pydocstyle = "^6.3.0"
pip-audit = "^2.9.0"
mkdocs = "^1.6.1"
mkdocstrings-python = "^1.16.12"
pygments = "^2.19.2"
mkdocs-material = "^9.6.15"
pymdown-extensions = "^10.16"
taskipy = "^1.14.1"
pandas-stubs = "^2.3.0.250703"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
kill = "lsof -ti :8000 | xargs kill -9"
test = "poetry run pytest -v"

[tool.poetry.plugins."poetry.plugin"]
taskipy = "taskipy.plugin:TaskPlugin"
